<resources>
    <string name="leak_canary_class_has_leaked">%s has leaked</string>
    <string name="leak_canary_class_leak_ignored">Ignored %s leak</string>
    <string name="leak_canary_analysis_failed">Leak analysis failed</string>
    <string name="leak_canary_leak_list_title">Leaks in %s</string>
    <string name="leak_canary_notification_leak_ignored_message">Click to see previous leaks</string>
    <string name="leak_canary_notification_message">Click for more details</string>
    <string name="leak_canary_share_leak">Share info</string>
    <string name="leak_canary_share_heap_dump">Share heap dump</string>
    <string name="leak_canary_share_with">Share with…</string>
    <string name="leak_canary_display_activity_label">Leaks</string>
    <string name="leak_canary_toast_heap_dump">Dumping memory, app will freeze. Brrrr.</string>
    <string name="leak_canary_delete">Delete</string>
    <string name="leak_canary_failure_report">"Please report this failure to http://github.com/square/leakcanary
"</string>
    <string name="leak_canary_delete_all">Delete all</string>
    <string name="smart_wake_settings">Smart wake</string>
    <string name="air_wake_settings">Air wake</string>
    <string name="app_name">Smart motion</string>
    <string name="seperate_motion_operation_settings">Air operation</string>
    <string name="smart_wakeup_settings">Smart screen on</string>
    <string name="smart_wakeup_off_settings">Smart turn on/off screen</string>
    <string name="smart_phone_settings">Smart call</string>
    <string name="click_content_preform_experience">Tap list to learn</string>
    <string name="wave_open_application_setting">Shake to open application</string>
    <string name="wave_open_Flashlight_setting">Shake to turn on the flashlight</string>
    <string name="learn_wave_open_Flashlight_setting_title">Learn more about Shake to turn on flashlight</string>
    <string name="learn_wave_open_application_setting">Shake to activate the flashlight on the home or lock screen with the display on</string>
    <string name="wave_open_application_setting_tips">"On the lit lock screen or home screen interface, shake the phone to turn on the flashlight
When the screen is dark, tap the lock screen button to turn off the flashlight"</string>
    <string name="tilt_phone_zoom_photes_setting">Tilt to zoom pictures</string>
    <string name="smart_remind_setting">Smart remind</string>
    <string name="learn_remind_title">Smart remind</string>
    <string name="learn_remind_msg">Get missed calls and unread message notifications when you pick up your phone</string>
    <string name="i_know">OK</string>
    <string name="off_screen_wake_up">Tap list to learn</string>
    <string name="screen_disable_to_view_setting">Black screen glance</string>
    <string name="learn_to_view_msg">When phone is flat and the screen is black, wave your palm across the top of the phone (3cm-5cm) to view phone status</string>
    <string name="learn_to_view_title">Black screen glance</string>
    <string name="screen_disable_to_unlock_setting">Slide upward to unlock</string>
    <string name="learn_to_unlock_msg">When screen is black, slide upward on the screen to unlock</string>
    <string name="learn_to_unlock_title">Slide upward to unlock</string>
    <string name="screen_disable_wake_camera_setting">Slide downward to take a photo</string>
    <string name="learn_quick_open_camera_title">Slide downward to take a photo</string>
    <string name="learn_quick_open_camera_msg">When screen is black, slide downward on the screen to take a photo</string>
    <string name="screen_disable_wake_dial_setting">"Draw 'c' to wake dialer"</string>
    <string name="learn_wake_dile_msg">"When screen is black, draw 'c' to wake dialer"</string>
    <string name="learn_wake_dile_title">"Draw 'c' to wake dialer"</string>
    <string name="screen_disable_wake_music_setting">"Draw 'm' to play music"</string>
    <string name="learn_wake_music_msg">"When screen is black, draw 'm' to play music"</string>
    <string name="learn_wake_music_title">"Draw 'm' to play music"</string>
    <string name="screen_disable_change_music_setting">Slide to change music</string>
    <string name="learn_change_music_msg">When screen is black, slide parallel across the bottom to change the music</string>
    <string name="learn_change_music_title">Slide to change music</string>
    <string name="screen_disable_wake_browser_setting">"Draw 'e' to wake browser"</string>
    <string name="learn_wake_browser_msg">"When screen is black, draw 'e' to wake browser"</string>
    <string name="learn_wake_browser_title">"Draw 'e' to wake browser"</string>
    <string name="screen_disable_wake_wechat_setting">"Draw 'w' to wake WeChat"</string>
    <string name="learn_wake_wechat_msg">"When screen is black, draw 'w' to wake WeChat"</string>
    <string name="learn_wake_wechat_title">"Draw 'w' to wake WeChat"</string>
    <string name="screen_disable_wake_WhatsApp_setting">"Draw 'w' to wake WhatsApp"</string>
    <string name="learn_wake_WhatsApp_msg">"When screen is black, draw 'w' to wake WhatsApp"</string>
    <string name="learn_wake_WhatsApp_title">"Draw 'w' to wake WhatsApp"</string>
    <string name="screen_disable_wake_facebook_setting">"Draw 'f' to launch Facebook"</string>
    <string name="learn_wake_facebook_msg">"Draw 'f' to launch Facebook when the screen is locked"</string>
    <string name="learn_wake_facebook_title">"Draw 'f' to launch Facebook"</string>
    <string name="screen_disable_wake_email_setting">"Draw '@' to launch Email"</string>
    <string name="learn_wake_email_msg">"Draw '@' to launch Email when the screen is locked"</string>
    <string name="learn_wake_email_title">"Draw '@' to launch Email"</string>
    <string name="air_wake_click_know">Tap list item to learn</string>
    <string name="air_wake_m">"Draw a 'M' in the air, can play music"</string>
    <string name="air_wake_learn_title_m">"Draw a 'M' in the air"</string>
    <string name="air_wake_v">"Draw a 'V' in the air"</string>
    <string name="air_wake_v_select">Set functions for when letter V is drawn</string>
    <string name="air_wake_v_select_tips">The VIP agent service</string>
    <string name="air_wake_s">"Draw a 'S' in the air"</string>
    <string name="air_wake_s_select">Set functions for when letter S is drawn</string>
    <string name="air_wake_s_select_tips">open Albums</string>
    <string name="air_wake_setting_msg">Air wake can be used only in black,when applied in black occupied long press the volume key operation,Air wake will not trigger</string>
    <string name="air_wake_select_loading">Loading…</string>
    <string name="air_wake_select_contact">Contacts</string>
    <string name="air_wake_select_contact_call">Call the designated contact</string>
    <string name="air_wake_select_contact_one">Select the designated contact</string>
    <string name="air_wake_select_contact_none">None</string>
    <string name="air_wake_select_app">Apply</string>
    <string name="air_wake_select_app_none">None</string>
    <string name="air_wake_select_settings">Function settings</string>
    <string name="air_wake_select_app_open">Open </string>
    <string name="air_wake_learn_content_m">"1.Press on the back button first, draw 'M' in air, when it vibrates
2.Release the finger, when action completed"</string>
    <string name="air_wake_learn_content_s">"1.Press on the back button first, draw 'S' in air, when it vibrates
2.Release the finger, when action completed"</string>
    <string name="air_wake_learn_content_v">"1.Press on the back button first, draw 'V' in air, when it vibrates
2.Release the finger, when action completed"</string>
    <string name="air_wake_learn_content_vk_m">"1.Press on the voice down first, draw 'M' in air, when it vibrates
2.Release the finger, when action completed"</string>
    <string name="air_wake_learn_content_vk_s">"1.Press on the voice down first, draw 'S' in air, when it vibrates
2.Release the finger, when action completed"</string>
    <string name="air_wake_learn_content_vk_v">"1.Press on the voice down first, draw 'V' in air, when it vibrates
2.Release the finger, when action completed"</string>
    <string name="motion_unlock_setting">Air unlock</string>
    <string name="learn_unlock_title">Air unlock</string>
    <string name="learn_unlock_msg">Wave your palm (3cm-5cm) above the screen to unlock the phone and light up the screen</string>
    <string name="touch_control_maps_setting">Air gestures on Album</string>
    <string name="touch_control_standby_interface_setting">Air operation in standby interface</string>
    <string name="learn_touch_control_standby_interface_title">Air operation in standby interface</string>
    <string name="learn_touch_control_standby_interface_msg">Wave your palm across the top of the phone (3cm-5cm) to change pages</string>
    <string name="screen_enable_out_pocket_setting">Light screen when out of a pocket</string>
    <string name="learn_screen_enable_out_pocket_setting">As shown in figure, the screen lights up automatically when the phone is taken out of a pocket</string>
    <string name="learn_screen_enable_out_pocket_setting_title">Light screen when out of a pocket</string>
    <string name="smart_wakeup_setting">Double click to light</string>
    <string name="learn_wakeup_title">Double click to light</string>
    <string name="learn_wakeup_msg">"Double click to light up screen when it's black"</string>
    <string name="dblclick_to_off_screen_setting">Double tap to turn off screen</string>
    <string name="learn_screenoff_title">Learn about \"Double tap to turn off screen\"</string>
    <string name="learn_screenoff_msg">Dblclick to off in light and locked interface and standby interfaces</string>
    <string name="smart_keep_screen_enable_setting">Smart keep bright</string>
    <string name="learn_smart_keep_screen_enable_title">Smart keep bright</string>
    <string name="learn_smart_keep_screen_enable_msg">This function uses the front camera to detect your face, so the screen will stay bright when you face to it</string>
    <string name="learn_smart_keep_screen_enable_msg1">This function may not work in following situations:</string>
    <string name="learn_smart_keep_screen_enable_msg2">1. Your face is not in front of screen</string>
    <string name="learn_smart_keep_screen_enable_msg3">2. Front camera is blocked</string>
    <string name="learn_smart_keep_screen_enable_msg4">3. You are in strong light or a dark place</string>
    <string name="learn_smart_keep_screen_enable_msg5">4. Front camera is used by other applications</string>
    <string name="smart_call_setting">Smart call</string>
    <string name="learn_smart_call_msg">Put phone close to ear to call contact in contact details, message thread and call details interface</string>
    <string name="learn_smart_call_title">Smart call</string>
    <string name="smart_answer_setting">Smart answer</string>
    <string name="learn_smart_answer_title">Smart answer</string>
    <string name="learn_smart_answer_msg">Pick up the phone and hold it close to your ear to answer an incoming call</string>
    <string name="smart_switch_setting">Smart switch</string>
    <string name="learn_smart_convert_title">Smart switch</string>
    <string name="learn_smart_convert_msg">"Put phone close to ear to switch to speaker mode when it's on hands free"</string>
    <string name="cover_screen_mute_setting">Smart mute</string>
    <string name="learn_cover_screen_mute_setting">Cover the screen to mute the phone while it is ringing</string>
    <string name="learn_cover_screen_mute_setting_title">Smart mute</string>
    <string name="smart_touch_setting">Wave to hands free</string>
    <string name="default_sim_settings">Default calling card</string>
    <string name="default_sim_settings_tips">SIM1</string>
</resources>